[gd_scene load_steps=7 format=2]

[ext_resource path="res://original_assets/lobby/sprites/DefineSprite_509/1.png" type="Texture" id=1]
[ext_resource path="res://prefabs/player_list_row.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/player_list.gd" type="Script" id=3]
[ext_resource path="res://original_assets/lobby/sounds/434_final_login002.wav" type="AudioStream" id=4]
[ext_resource path="res://original_assets/lobby/sounds/435_hum_loop01.wav" type="AudioStream" id=5]
[ext_resource path="res://original_assets/lobby/sounds/433_final_login001.wav" type="AudioStream" id=6]

[node name="PlayerList" type="Node2D"]
script = ExtResource( 3 )

[node name="PlayerJoinedSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="NewPlayerJoinedSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="PlayerLeftSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="PlayerListBG" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = -388.0
margin_top = -366.0
margin_right = 386.0
margin_bottom = 375.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerListVBox" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 774.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerListRow" parent="ScrollContainer/PlayerListVBox" instance=ExtResource( 2 )]
visible = false
margin_right = 774.0

[node name="PlayerListRow6" parent="ScrollContainer/PlayerListVBox" instance=ExtResource( 2 )]
visible = false
margin_right = 774.0
username = "as2d GUEST"

[node name="PlayerListRow2" parent="ScrollContainer/PlayerListVBox" instance=ExtResource( 2 )]
visible = false
margin_right = 774.0
username = "a123123sd GUEST"

[node name="PlayerListRow3" parent="ScrollContainer/PlayerListVBox" instance=ExtResource( 2 )]
visible = false
margin_right = 774.0

[node name="PlayerListRow4" parent="ScrollContainer/PlayerListVBox" instance=ExtResource( 2 )]
visible = false
margin_right = 774.0

[node name="PlayerListRow5" parent="ScrollContainer/PlayerListVBox" instance=ExtResource( 2 )]
visible = false
margin_right = 774.0
